--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Hello, world!</p>
-    <p>Made with ❤️ using <a href="https://pulumi.com">Pulumi</a></p>
+    <p>Made with love using <a href="https://pulumi.com">Pulumi</a></p>
     <p>Served from: <span id="source"></span></p>
 </body>
 <script>
