--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
 <body>
-    <p>Hello, world!</p>
+    <p>Hi, world!</p>
     <p>Made with love using <a href="https://pulumi.com">Pulumi</a></p>
     <p>Served from: <span id="source"></span></p>
 </body>
